<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />
    </group>

    <item android:title="@string/visit_us">
        <menu>
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/facebook" />
            <item
                android:id="@+id/nav_youtube"
                android:icon="@drawable/ic_youtube"
                android:title="@string/youtube" />
            <item
                android:id="@+id/nav_website"
                android:icon="@drawable/ic_external_link"
                android:title="@string/website" />
        </menu>
    </item>
</menu>
